Included first draft

--- a/src/styles/customStyles.scss
+++ b/src/styles/customStyles.scss
@@ -99,6 +99,9 @@
 .fontface-fortune{
     font-family: 'Fortune', sans-serif;
 }
+.fontface-revamped{
+    font-family: 'Revamped', sans-serif;
+}
 .fontface-antonio{
     font-family: 'Antonio', sans-serif;
     font-weight:600;
